--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ p {
     border-radius: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     color: white !important;
+    font-size: 2rem;
     padding: 10px;
     height: 200px;
     /* Ajusta la altura según tus necesidades */
@@ -84,8 +85,17 @@ p {
     border-color: white;
 }
 
-
-
+.bg-light{
+    height: 40vh;
+    background-color: #ffffff3d !important;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    color: white !important;
+    font-size: 2rem;
+    padding: 10px;
+    height: 200px;
+}
 
 
 
