--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ p {
     border-color: white;
 }
 
-.bg-light{
+.bg-light {
     height: 40vh;
     background-color: #ffffff3d !important;
     border: 1px solid #fff;
@@ -111,7 +111,7 @@ p {
 
 
 /* Estilos para la sección con video de fondo */
-video{
+video {
     width: 100%;
     height: 100%;
 }
@@ -144,4 +144,36 @@ video{
     min-height: 100vh !important;
     display: flex !important;
     align-items: center !important;
+}
+
+/* Estilos para el modal "glass" rojo */
+.glass-modal {
+    background-color: rgba(255, 0, 0, 0.322);
+    backdrop-filter: blur(10px);
+    border: 1px solid #fff;
+    border-radius: 10px;
+    color: #fff !important;
+}
+
+.p-m {
+    color: #ffffff !important;
+}
+
+/* Cambia el color de fondo del botón de cierre */
+.glass-modal .modal-header .btn-close {
+    color: #fff !important;
+}
+
+/* Iconos de advertencia */
+.glass-modal .modal-title .bi {
+    font-size: 1.5rem;
+}
+
+.btn-warning {
+    color: #ffffff !important;
+}
+
+/* Cambia el color de la "X" para cerrar a blanco */
+.btn-close-white {
+    color: white;
 }
