--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 :root {
     --blanco: #ffffff;
     --gris: #5a5a5a;
+    --negro: #000;
 }
 
 * {
@@ -176,4 +177,54 @@ video {
 /* Cambia el color de la "X" para cerrar a blanco */
 .btn-close-white {
     color: white;
+}
+
+/* Estilos para la pantalla de carga */
+.loader-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: var(--negro);
+    /* Fondo semi-transparente rojo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    /* Capa superior para que esté por encima de otros elementos */
+    transition: opacity 0.5s;
+    /* Transición suave de la opacidad */
+    opacity: 1;
+    /* Opacidad inicial */
+}
+
+/* Estilos para el spinner de carga */
+.loader {
+    border: 8px solid var(--blanco);
+    /* Círculo exterior gris claro */
+    border-top: 8px solid var(--gris);
+    /* Círculo superior azul */
+    border-radius: 50%;
+    /* Borde redondeado para crear un círculo */
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    /* Animación de rotación */
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+        /* Rotación inicial */
+    }
+
+    100% {
+        transform: rotate(360deg);
+        /* Rotación completa */
+    }
+}
+
+/* Ocultar la pantalla de carga después de que la página haya cargado */
+#content {
+    display: none;
+    /* Inicialmente oculto */
 }
