--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
+// Estilos
+import '../styles/styles.css';
+
+// Componentes
 import Scripts from '../components/Scripts.astro';
+import Spinner from '../components/Spinner.astro';
+import Main from '../components/Main.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Encriptador.">
 	<Scripts></Scripts>
+	<Spinner></Spinner>
+	<Main></Main>
 </Layout>
