feat(): Estilos de las cajas
Co-Authored-By: axxving <160192346+axxving@users.noreply.github.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 
 // Estilos
-import '../styles/styles.css';
+import "../styles/styles.css";
 
 // Componentes
-import Scripts from '../components/Scripts.astro';
-import Spinner from '../components/Spinner.astro';
-import Main from '../components/Main.astro';
+import Scripts from "../components/Scripts.astro";
+import Spinner from "../components/Spinner.astro";
+import Main from "../components/Main.astro";
 ---
 
 <Layout title="Encriptador.">
-	<Scripts></Scripts>
-	<Spinner></Spinner>
-	<Main></Main>
+	<Scripts />
+	<Spinner />
+	<Main />
 </Layout>
