--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,52 +7,52 @@
 }
 
 * {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif !important;
 }
 
 #encriptador {
-    min-height: 100vh;
+    min-height: 100vh !important;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 .display-3 {
-    font-weight: bold;
-    color: var(--blanco);
+    font-weight: bold !important;
+    color: var(--blanco) !important;
 }
 
 .lead {
-    font-weight: bold;
-    color: var(--gris);
+    font-weight: bold !important;
+    color: var(--gris) !important;
 }
 
 p {
-    color: var(--blanco);
+    color: var(--blanco) !important;
 }
 
 .row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 /* Estilos para el textarea "glass" */
 .glass-textarea {
-    background-color: #ffffff3d;
-    border: 1px solid #fff;
-    border-radius: 10px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    background-color: #ffffff3d !important;
+    border: 1px solid #fff !important;
+    border-radius: 10px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
     color: white !important;
-    font-size: 2rem;
-    padding: 10px;
-    height: 200px;
+    font-size: 2rem !important;
+    padding: 10px !important;
+    height: 200px !important;
     /* Ajusta la altura según tus necesidades */
 }
 
 .glass-textarea::placeholder {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5) !important;
     /* Color del placeholder */
 }
 
@@ -60,66 +60,77 @@ p {
 
 /* Anula el fondo blanco cuando el textarea obtiene el foco */
 .glass-textarea:focus {
-    background-color: transparent;
-    box-shadow: none;
+    background-color: transparent !important;
+    box-shadow: none !important;
 }
 
 /* Establece el color del borde a blanco */
 .glass-textarea {
-    border-color: white;
+    border-color: white !important;
 }
 
 /* Cambia el color del texto cuando se escribe */
 .glass-textarea::placeholder,
 .glass-textarea {
-    color: white;
+    color: white !important;
 }
 
 /* Ajusta el color del borde inferior en estado normal */
 .glass-textarea {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
 }
 
 /* Anula el resplandor azul en el enfoque del textarea */
 .glass-textarea:focus {
-    box-shadow: none;
-    border-color: white;
+    box-shadow: none !important;
+    border-color: white !important;
 }
 
 .bg-light {
-    height: 40vh;
+    height: 40vh !important;
     background-color: #ffffff3d !important;
-    border: 1px solid #fff;
-    border-radius: 10px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid #fff !important;
+    border-radius: 10px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
     color: white !important;
-    font-size: 2rem;
-    padding: 10px;
-    height: 200px;
+    font-size: 2rem !important;
+    padding: 10px !important;
+    height: 200px !important;
 }
 
+#cuadroEncriptado {
+    height: 40vh !important;
+    background-color: #ffffff3d !important;
+    border: 1px solid #fff !important;
+    border-radius: 10px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
+    color: white !important;
+    font-size: 2rem !important;
+    padding: 10px !important;
+    height: 200px !important;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+#cuadroDescencriptado {
+    height: 40vh !important;
+    background-color: #ffffff3d !important;
+    border: 1px solid #fff !important;
+    border-radius: 10px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
+    color: white !important;
+    font-size: 2rem !important;
+    padding: 10px !important;
+    height: 200px !important;
+}
 
 /* Estilos para la sección con video de fondo */
 video {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .video-background {
-    position: relative;
-    overflow: hidden;
+    position: relative !important;
+    overflow: hidden !important;
 }
 
 /* Ajustes para dispositivos móviles */
@@ -130,13 +141,13 @@ video {
 }
 
 .video-background video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    object-fit: cover;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: -1 !important;
+    object-fit: cover !important;
 }
 
 
@@ -149,10 +160,10 @@ video {
 
 /* Estilos para el modal "glass" rojo */
 .glass-modal {
-    background-color: rgba(255, 0, 0, 0.322);
-    backdrop-filter: blur(10px);
-    border: 1px solid #fff;
-    border-radius: 10px;
+    background-color: rgba(255, 0, 0, 0.322) !important;
+    backdrop-filter: blur(10px) !important;
+    border: 1px solid #fff !important;
+    border-radius: 10px !important;
     color: #fff !important;
 }
 
@@ -167,7 +178,7 @@ video {
 
 /* Iconos de advertencia */
 .glass-modal .modal-title .bi {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
 }
 
 .btn-warning {
@@ -176,71 +187,5 @@ video {
 
 /* Cambia el color de la "X" para cerrar a blanco */
 .btn-close-white {
-    color: white;
-}
-
-/* Estilos para la pantalla de carga */
-.loader-wrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: var(--negro);
-    /* Fondo semi-transparente rojo */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    /* Capa superior para que esté por encima de otros elementos */
-    transition: opacity 0.5s;
-    /* Transición suave de la opacidad */
-    opacity: 1;
-    /* Opacidad inicial */
-}
-
-/* Estilos para el spinner de carga */
-.loader {
-    border: 8px solid #f3f3f3;
-    /* Círculo exterior gris claro */
-    border-top: 8px solid var(--gris);
-    /* Círculo superior azul */
-    border-radius: 50%;
-    /* Borde redondeado para crear un círculo */
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-    /* Animación de rotación */
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-        /* Rotación inicial */
-    }
-
-    100% {
-        transform: rotate(360deg);
-        /* Rotación completa */
-    }
-}
-
-/* Ocultar la pantalla de carga después de que la página haya cargado */
-body:not(.loaded) .loader-wrapper {
-    opacity: 1;
-}
-
-/* Mostrar el contenido de la página después de cargar completamente */
-body.loaded .loader-wrapper {
-    opacity: 0;
-    pointer-events: none;
-    /* Permitir interacción con elementos debajo de la pantalla de carga */
-}
-
-/* Contenido de la página */
-#content {
-    display: none;
-    /* Inicialmente oculto */
-}
-
-body.loaded #content {
-    display: block;
+    color: white !important;
 }
