feat(): Muda a Laravel
Co-Authored-By: axxving <160192346+axxving@users.noreply.github.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 
 // Estilos
 import "../styles/styles.css";
+import "./src/astro.ts";
 
 // Componentes
 import Scripts from "../components/Scripts.astro";
