feat(style): Spinner
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-#header{
+#header {
     background-color: var(--transparente);
     backdrop-filter: blur(10px);
 
@@ -6,4 +6,52 @@
     top: 0;
 
     z-index: 100000;
+}
+
+.nav-link {
+    color: var(--blanco);
+}
+
+.nav-link:hover {
+    color: var(--blanco);
+}
+
+.nav-link:active {
+    color: var(--blanco);
+}
+
+.nav-link:focus {
+    color: var(--blanco);
+}
+
+.navbar-brand:hover {
+    color: var(--blanco);
+}
+
+.navbar-brand:focus {
+    color: var(--blanco);
+}
+
+.navbar-brand {
+    color: var(--blanco);
+    font-weight: bold;
+}
+
+.bi-shield-lock-fill {
+    color: var(--blanco);
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+    color: transparent !important;
+    outline: none !important;
+    border: none !important;
+}
+
+.navbar-toggler:focus {
+    outline: none;
+    border: none;
 }
