feat(): Agregando footer
Co-Authored-By: Irving Alejandro Hernández Ramírez <160192346+axxving@users.noreply.github.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@
     font-family: "Montserrat", sans-serif;
 }
 
+body{
+    background-color: var(--negro);
+}
+
 .titulo {
     font-weight: bolder;
     color: var(--blanco);
@@ -115,11 +119,15 @@
     color: var(--blanco);
 }
 
+i{
+    font-size: 1.2rem;
+}
 
 
 
-
-
+.bix{
+    font-size: 2rem;
+}
 
 
 
